--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Site Famille</title>
 </head>
 <body>
-    <h1>Bienvenue sur mon site !</h1>
+    <h1>Bienvenue sur le site de la famille!</h1>
 </body>
 </html>
