--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Site de la famille</title>
-  <link rel="stylesheet" href="style.css">
-  <link id="theme" rel="stylesheet" href="style.css">
+  <title>Mon premier site web</title>
+  <link rel="stylesheet" href="style.css"> 
+  <link id="theme" rel="stylesheet" href="style.css"> 
 </head>
 <body>
-  <button onclick="toggleTheme()">Changer de thème</button>
+  <h1>Bienvenue sur le site !</h1>
+  <p>Vous trouverez de nombreuses informations utiles.</p>
+
+  <button onclick="toggleTheme()">Changer de thème</button> 
+
   <script>
     function toggleTheme() {
       let theme = document.getElementById('theme');
