--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mon premier site web</title>
+  <title>Site de la famille</title>
   <link rel="stylesheet" href="style.css"> 
   <link id="theme" rel="stylesheet" href="style.css"> 
 </head>
