--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Site de la famille</title>
-  <link rel="stylesheet" href="style.css"> 
-  <link id="theme" rel="stylesheet" href="style.css"> 
+  <title>Mon site web</title>
+  <link rel="stylesheet" href="style.css">
+  <link id="theme" rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bienvenue sur le site !</h1>
+  <h1>Bienvenue sur le site de la famille !</h1>
   <p>Vous trouverez de nombreuses informations utiles.</p>
 
-  <button onclick="toggleTheme()">Changer de thème</button> 
+  <h2>Liste de courses</h2>
+  <ul id="listeCourses">
+  </ul>
+
+  <input type="text" id="nouvelItem" placeholder="Ajouter un élément">
+  <input type="number" id="quantite" placeholder="Quantité">
+  <button onclick="ajouterItem()">Ajouter</button>
+
+  <button onclick="toggleTheme()">Changer de thème</button>
 
   <script>
     function toggleTheme() {
@@ -18,6 +26,18 @@
         theme.href = 'dark.css';
       } else {
         theme.href = 'style.css';
+      }
+    }
+
+    function ajouterItem() {
+      const liste = document.getElementById('listeCourses');
+      const nouvelItem = document.getElementById('nouvelItem').value;
+      const quantite = document.getElementById('quantite').value;
+
+      if (nouvelItem !== '') {
+        const li = document.createElement('li');
+        li.textContent = `${quantite} x ${nouvelItem}`;
+        liste.appendChild(li);
       }
     }
   </script>
