--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script>
     function toggleTheme() {
-      let theme = document.getElementById('theme');
+      const theme = document.getElementById('theme');
       if (theme.getAttribute('href') == 'style.css') {
         theme.href = 'dark.css';
       } else {
