--- a/index.html
+++ b/index.html
@@ -34,3 +34,13 @@
   </script>
 </body>
 </html>
+<ul id="listeCourses">
+</ul>
+
+<script>
+  // ... reste du code JavaScript ...
+</script>
+</body>
+</html>
+
+
