--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
   <span id="theme-switcher" class="light-mode" style="position: absolute; top: 10px; right: 10px;">☀️</span>
 
   <script>
+    function ajouterItem() {
+      const liste = document.getElementById('listeCourses');
+      const nouvelItem = document.getElementById('nouvelItem').value;
+      const quantite = document.getElementById('quantite').value;
+
+      if (nouvelItem !== '') {
+        const li = document.createElement('li');
+        li.textContent = `${quantite} x ${nouvelItem}`;
+
+        const supprimerBtn = document.createElement('button');
+        supprimerBtn.textContent = 'Supprimer';
+        supprimerBtn.onclick = function() {
+          liste.removeChild(li);
+        };
+
+        li.appendChild(supprimerBtn);
+        liste.appendChild(li);
+      }
+    }
+
     function toggleTheme() {
       const themeSwitcher = document.getElementById('theme-switcher');
       const body = document.body;
@@ -32,21 +52,5 @@
       }
     }
   </script>
-</body>
-<html>
-<script>
-  // ... reste du code JavaScript ...
-
-  function ajouterItem() {
-    // ... code existant ...
-    const supprimerBtn = document.createElement('button');
-    supprimerBtn.textContent = 'Supprimer';
-    supprimerBtn.onclick = function() {
-      liste.removeChild(li);
-    };
-    li.appendChild(supprimerBtn);
-    // ...
-  }
-</script>
 </body>
 </html>
