--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<button id="theme-toggle"></button>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Mon site familial</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <button id="theme-toggle"></button>
+  <script src="script.js"></script>
+</body>
+</html>
