--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ma liste de courses</title>
+</head>
+<body>
+  <input type="text" id="item" placeholder="Ajouter un élément">
+  <input type="text" id="category" placeholder="Catégorie">
+  <input type="number" id="quantity" placeholder="Quantité">
+  <button onclick="addItem()">Ajouter</button>
 
+  <ul id="shoppingList"></ul>
+
+  <script src="script.js"></script>
+</body>
+</html>
