--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <ul id="shoppingList"></ul>
 
   <script src="script.js"></script>
+  <button id="theme-toggle">Changer de thème</button>
 </body>
 </html>
+
