--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
   <script src="script.js"></script>
   <button id="theme-toggle">Changer de thème</button>
+
+
+  <div class="container">
+    <div class="form-container">
+        </div>
+    <div class="list-container">
+        <ul id="shoppingList"></ul>
+    </div>
+</div>
 </body>
 </html>
 
