--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
       </div>
   </div>
   <script src="script.js"></script>
+  <input type="text" id="search" placeholder="Rechercher un élément">
 </body>
 </html>
