--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bonjour {prénom de la personne}</h1>
-    <div class="button-container">
-      <a href="#" class="button">Agenda</a>
-      <a href="#" class="button">To Do</a>
-      <a href="#" class="button">Courses</a>
+    <h1>Bonjour, [Ton prénom] !</h1>
+    <div class="buttons-container">
+      <a href="#" class="button">
+        <img src="images/icon-agenda.png" alt="Agenda">
+        <span>Agenda</span>
+      </a>
+      <a href="#" class="button">
+        <img src="images/icon-todo.png" alt="To Do">
+        <span>To Do</span>
+      </a>
+      <a href="#" class="button">
+        <img src="images/icon-courses.png" alt="Courses">
+        <span>Courses</span>
+      </a>
     </div>
     <div class="navigation">
-      <a href="#">Accueil</a>
-      <a href="#">Profil</a>
+      <a href="#" class="button-nav">
+        <img src="images/icon-home.png" alt="Accueil">
+        <span>Accueil</span>
+      </a>
+      <a href="#" class="button-nav">
+        <span>Profil</span>
+      </a>
     </div>
   </div>
 </body>
